--- a/DV.Rmd
+++ b/DV.Rmd
@@ -49,7 +49,7 @@ extract_ingredients_cleaned <- function(text) {
   
   # Удаление чисел, единиц измерения и других слов
   cleaned_list <- sapply(ingredients_list, function(x) {
-    x <- str_remove_all(x, "\\d+|\\b(g|kg|ml|tbsp|tsp|cup|cups|oz|lbs?|pounds?|tablespoons?|teaspoons?|cloves?|pieces?)\\b|\\b(large|small|of)\\b|/")
+    x <- str_remove_all(x, "\\d+\\s*(g|kg|ml|tbsp|tsp|cup|cups|oz|lbs?|pounds?|tablespoons?|teaspoons?|cloves?|pieces?)\\b|\\b(large|small|of)\\b|/")
     str_trim(x)
   })
   
