--- a/DV.Rmd
+++ b/DV.Rmd
@@ -31,7 +31,7 @@ library(tm)
 ```{r}
 
 data <- reactive({
-  read.csv("C:/Users/zu777/Documents/4s/dviz/DataVizDashboard-main/DataBase/your_updated_file.csv") %>%
+  read.csv("DataBase/your_updated_file.csv") %>%
     mutate(Contains_Meat = ifelse(grepl("meat|chicken|beef|pork|lamb|fish", Description, ignore.case = TRUE), "Yes", "No"))
 })
 
@@ -52,6 +52,8 @@ extract_ingredients_cleaned <- function(text) {
   # Удаление чисел, единиц измерения и других слов
   cleaned_list <- sapply(ingredients_list, function(x) {
     x <- str_remove_all(x, "\\d+\\s*(g|kg|ml|tbsp|tsp|cup|cups|oz|lbs?|pounds?|tablespoons?|teaspoons?|cloves?|pieces?)\\b|\\b(large|small|of)\\b|/")
+    x <- str_remove_all(x, "\\b\\d+\\b")  # Remove standalone numbers
+    x <- str_remove_all(x, "\\(.*?\\)")  # Remove phrases in parentheses
     str_trim(x)
   })
   
