--- a/DV.Rmd
+++ b/DV.Rmd
@@ -307,4 +307,36 @@ plotOutput("dishWordCloud")
 
 ## Row 3 {data-height="10"}
 
-something something 
+The project "Dishes Of The World" aims to provide information about dishes from around the world. For each country, the most popular national dish is selected. Users can interact with the data and get detailed information about recipes. The main components of the project include:
+
+1. **Map with Dishes**:
+   - An interactive map displays dishes from different countries.
+   - Each dish is represented by a marker, with the color indicating whether the dish contains meat (red — contains meat, green — does not contain meat).
+   - Clicking on a marker reveals a popup with detailed information about the dish, its description, and ingredients.
+
+2. **Data Table**:
+   - Users can view and filter data about the dishes.
+   - Columns with geographic coordinates are excluded for easier analysis.
+
+3. **Recipe Details**:
+   - Detailed information about the recipe is displayed when a dish is selected on the map.
+   - Includes a list of ingredients and preparation instructions.
+
+4. **Ingredients Pie Chart**:
+   - An interactive pie chart shows the distribution of ingredients in the selected recipe.
+   - A bar chart displays the top 10 ingredients used in recipes.
+
+5. **Distribution of Meat and Non-Meat Dishes**:
+   - A pie chart shows the percentage distribution of recipes containing meat and those that do not.
+
+6. **Word Cloud**:
+   - A word cloud visualization displays the names of the most frequently mentioned dishes.
+
+7. **General Statistics**:
+   - Analysis of the most common ingredients used in recipes.
+   - Distribution of meat and non-meat recipes (marker color on the map: red — contains meat, green — does not contain meat).
+
+8. **About the Project**:
+   - Additional information about the project and its authors.
+
+The project is designed for chefs, researchers, and anyone interested in international cuisine.
