--- a/Dashboard/DV.Rmd
+++ b/Dashboard/DV.Rmd
@@ -24,11 +24,14 @@ library(stringr)
 library(ggplot2)
 library(shinydashboard)
 library(RColorBrewer)
+library(wordcloud)
+library(tm)
 ```
+
 ```{r}
 
 data <- reactive({
-  read.csv("C:/Users/user/Downloads/УЁБА/your_updated_file.csv") %>%
+  read.csv("DataBase/your_updated_file.csv") %>%
     mutate(Contains_Meat = ifelse(grepl("meat|chicken|beef|pork|lamb|fish", Description, ignore.case = TRUE), "Yes", "No"))
 })
 
@@ -48,7 +51,9 @@ extract_ingredients_cleaned <- function(text) {
   
   # Удаление чисел, единиц измерения и других слов
   cleaned_list <- sapply(ingredients_list, function(x) {
-    x <- str_remove_all(x, "\\d+|\\b(g|kg|ml|tbsp|tsp|cup|cups|oz|lbs?|pounds?|tablespoons?|teaspoons?|cloves?|pieces?)\\b|\\b(large|small|of)\\b|/")
+    x <- str_remove_all(x, "\\d+\\s*(g|kg|ml|tbsp|tsp|cup|cups|oz|lbs?|pounds?|tablespoons?|teaspoons?|cloves?|pieces?)\\b|\\b(large|small|of)\\b|/")
+    x <- str_remove_all(x, "\\b\\d+\\b")  # Remove standalone numbers
+    #x <- str_remove_all(x, "\\(.*?\\)")  # Remove phrases in parentheses
     str_trim(x)
   })
   
@@ -61,13 +66,9 @@ extract_ingredients_cleaned <- function(text) {
 
 ```
 
-Dishes{data-orientation=rows}
-==================================================================
+# Dishes {data-orientation="rows"}
 
-## Row 1 {data-heigh=100}
-
-Column {.tabset .tabset-fade data-width=650}
------------------------------------------------------------------------
+## Column {data-width="650"}
 
 ### Map
 
@@ -93,25 +94,7 @@ leafletOutput("map")
 
 ```
 
-### Datatable {data-height=600}
-
-
-```{r}
-
-data_filt <- reactive({ data() %>% select(-Longitude, -Latitude) })
-
-output$table <- renderDataTable({
-  datatable(data_filt(),
-            options = list(pageLength = 10, autoWidth = TRUE),
-            filter = 'top',
-            class = 'cell-border stripe')
-})
-
-dataTableOutput("table")
-
-```
-## Column {data-width=350}
-------------------------------------------------------------------
+## \## Column {data-width="350"}
 
 ### Recipe Details {.no-padding}
 
@@ -163,7 +146,7 @@ output$ingredientsPieChart <- renderHighchart({
       pie = list(
         allowPointSelect = TRUE,
         cursor = 'pointer',
-        dataLabels = list(enabled = TRUE, format = '{point.name}: {point.y}')
+        dataLabels = list(enabled = TRUE, format = '{point.name}')
       )
     ) %>%
     hc_colors(custom_colors) %>%
@@ -174,12 +157,28 @@ output$ingredientsPieChart <- renderHighchart({
 
 highchartOutput("ingredientsPieChart")
 ```
+## Column {data-width="650"}
 
+### Datatable {data-height="600"}
 
-## Row {data-height=120}
+```{r}
 
+data_filt <- reactive({ data() %>% select(-Longitude, -Latitude) })
 
-### <font sixe='5'>**https://www.put.poznan.pl/** </font>
+output$table <- renderDataTable({
+  datatable(data_filt(),
+            options = list(pageLength = 10, autoWidth = TRUE),
+            filter = 'top',
+            class = 'cell-border stripe')
+})
+
+dataTableOutput("table")
+
+```
+
+## Row {data-height="120"}
+
+### <font sixe='5'>[**https://www.put.poznan.pl/**](https://www.put.poznan.pl/){.uri} </font>
 
 ```{r fig.width=1}
 valueBox(
@@ -191,7 +190,7 @@ valueBox(
 
 ```
 
-### {.no-padding}
+###  {.no-padding}
 
 ```{r fig.width=1}
 valueBox(
@@ -201,12 +200,11 @@ valueBox(
     )
 ```
 
-## Row 3 {data-height=10}
+## Row 3 {data-height="10"}
 
-Column {data-width=350}
-------------------------------------------------------------------
+## Column {data-width="350"}
 
-### {.no-padding data-height=350}
+###  {.no-padding data-height="350"}
 
 ```{r}
 custom_colors <- viridis::viridis(n=10, begin=0.3, end=1)
@@ -253,7 +251,7 @@ highchartOutput("ingredientsChart")
 
 ```
 
-### {.no-padding data-height=350}
+###  {.no-padding data-height="350"}
 
 ```{r}
 output$meatPieChart <- renderHighchart({
@@ -277,7 +275,7 @@ output$meatPieChart <- renderHighchart({
       pie = list(
         allowPointSelect = TRUE,
         cursor = 'pointer',
-        dataLabels = list(enabled = TRUE, format = '{point.name}: {point.y}')
+        dataLabels = list(enabled = TRUE, format = '{point.name}')
       )
     )
 
@@ -288,3 +286,68 @@ highchartOutput("meatPieChart")
 
 
 ```
+## Row 4 {data-height="10"}
+## Column {data-width="650"}
+### Dish Word Cloud
+```{r}
+selectInput("dishType", "Choose dish type:",
+            choices = list("All" = "all",
+                           "Contains Meat" = "meat",
+                           "Does Not Contain Meat" = "nomeat"))
+
+plotOutput("dishWordCloud")
+
+output$dishWordCloud <- renderPlot({
+  req(input$dishType) 
+  dat <- data() 
+
+  if (input$dishType == "meat") {
+    filtered_data <- dat %>% filter(Contains_Meat == "Yes")
+  } else if (input$dishType == "nomeat") {
+    filtered_data <- dat %>% filter(Contains_Meat == "No")
+  } else {
+    filtered_data <- dat
+  }
+
+  wordcloud(words = filtered_data$Dish,
+            min.freq = 1,
+            max.words = 100,
+            random.order = FALSE,
+            colors = brewer.pal(8, "Dark2")) 
+})
+```
+
+# About {data-orientation="rows"}
+
+<!-- ## Row 3 {data-height="10"} -->
+
+The project "Dishes Of The World" aims to provide information about dishes from around the world. For each country, the most popular national dish is selected. Users can interact with the data and get detailed information about recipes. The main components of the project include:
+
+1. **Map with Dishes**:
+   - An interactive map displays dishes from different countries.
+   - Each dish is represented by a marker, with the color indicating whether the dish contains meat (red — contains meat, green — does not contain meat).
+   - Clicking on a marker reveals a popup with detailed information about the dish, its description, and ingredients.
+
+2. **Data Table**:
+   - Users can view and filter data about the dishes.
+   - Columns with geographic coordinates are excluded for easier analysis.
+
+3. **Recipe Details**:
+   - Detailed information about the recipe is displayed when a dish is selected on the map.
+   - Includes a list of ingredients and preparation instructions.
+
+4. **Ingredients Pie Chart**:
+   - An interactive pie chart shows the distribution of ingredients in the selected recipe.
+   - A bar chart displays the top 10 ingredients used in recipes.
+
+5. **Distribution of Meat and Non-Meat Dishes**:
+   - A pie chart shows the percentage distribution of recipes containing meat and those that do not.
+
+6. **Word Cloud**:
+   - A word cloud visualization displays the names of the most frequently mentioned dishes.
+
+7. **General Statistics**:
+   - Analysis of the most common ingredients used in recipes.
+   - Distribution of meat and non-meat recipes (marker color on the map: red — contains meat, green — does not contain meat).
+
+The project is designed for chefs, researchers, and anyone interested in international cuisine.
