--- a/DV.Rmd
+++ b/DV.Rmd
@@ -35,7 +35,6 @@ data <- reactive({
     mutate(Contains_Meat = ifelse(grepl("meat|chicken|beef|pork|lamb|fish", Description, ignore.case = TRUE), "Yes", "No"))
 })
 
-# Function to check if a recipe contains meat
 contains_meat <- function(recipe) {
   meats <- c("chicken", "beef", "pork", "lamb", "fish", "meat", "turkey", "bacon", "sausage", "ham")
   any(sapply(meats, grepl, x = tolower(recipe)))
@@ -43,21 +42,19 @@ contains_meat <- function(recipe) {
 library(stringr)
 
 extract_ingredients_cleaned <- function(text) {
-  # Извлечение текста ингредиентов
   ingredients_text <- sub(".*Ingredients:\\s*(.*?)\\s*(Instructions|$).*", "\\1", text)
   
-  # Предобработка текста и разделение на список
   ingredients_list <- str_split(ingredients_text, ",\\s*|\\band\\b")[[1]]
   
-  # Удаление чисел, единиц измерения и других слов
+
   cleaned_list <- sapply(ingredients_list, function(x) {
     x <- str_remove_all(x, "\\d+\\s*(g|kg|ml|tbsp|tsp|cup|cups|oz|lbs?|pounds?|tablespoons?|teaspoons?|cloves?|pieces?)\\b|\\b(large|small|of)\\b|/")
-    x <- str_remove_all(x, "\\b\\d+\\b")  # Remove standalone numbers
-    #x <- str_remove_all(x, "\\(.*?\\)")  # Remove phrases in parentheses
+    x <- str_remove_all(x, "\\b\\d+\\b") 
+    #x <- str_remove_all(x, "\\(.*?\\)")  
     str_trim(x)
   })
   
-  # Фильтрация пустых значений
+  
   cleaned_list <- cleaned_list[nzchar(cleaned_list)]
   
   return(cleaned_list)
@@ -75,7 +72,7 @@ extract_ingredients_cleaned <- function(text) {
 ```{r}
 
 output$map <- renderLeaflet({
-  dat <- data() # предполагается, что данные загружены и доступны
+  dat <- data() 
   color_logic <- colorFactor(palette = c("darkolivegreen1", "lightcoral"), domain = c("Yes", "No"))
 
   leaflet(dat) %>%
